Adds mutation overlay ordering that can be configured in JSON. The ordering layer value can range from 0 to 9999. Layers with the same value will add the layers in whatever order the player has the mutations in. Most layers should contain mostly mutually exclusive mutations. Any modern tileset can override the layering by providing values for specific mutations in the tileset json.

--- a/CataclysmWin.cbp
+++ b/CataclysmWin.cbp
@@ -556,6 +556,8 @@
 		<Unit filename="src/options.h" />
 		<Unit filename="src/output.cpp" />
 		<Unit filename="src/output.h" />
+		<Unit filename="src/overlay_ordering.cpp" />
+		<Unit filename="src/overlay_ordering.h" />
 		<Unit filename="src/overmap.cpp" />
 		<Unit filename="src/overmap.h" />
 		<Unit filename="src/overmap_types.h" />
