--- a/CataclysmWin.cbp
+++ b/CataclysmWin.cbp
@@ -430,6 +430,8 @@
 		<Unit filename="src/game_constants.h" />
 		<Unit filename="src/gamemode.cpp" />
 		<Unit filename="src/gamemode.h" />
+		<Unit filename="src/gates.cpp" />
+		<Unit filename="src/gates.h" />
 		<Unit filename="src/generic_factory.h" />
 		<Unit filename="src/get_version.h" />
 		<Unit filename="src/help.cpp" />
